src/objects/Stationary__c.object
<CustomObject>
    <description>Its has Stationary data.</description>
    <fields>
        <fullName>Developement_Center__c</fullName>
        <description>Pick your class</description>
        <label>Developement Center</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Class 1</fullName>
                </value>
                <value>
                    <fullName>Class 2</fullName>
                </value>
                <value>
                    <fullName>Class 3</fullName>
                </value>
                <value>
                    <fullName>Class 4</fullName>
                </value>
                <value>
                    <fullName>Class 5</fullName>
                </value>
                <value>
                    <fullName>Class 6</fullName>
                </value>
                <value>
                    <fullName>Class 7</fullName>
                </value>
                <value>
                    <fullName>Class 8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Please Select your location for shop</description>
        <label>Location</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pune</fullName>
                </value>
                <value>
                    <fullName>Agra</fullName>
                </value>
                <value>
                    <fullName>Delhi</fullName>
                </value>
                <value>
                    <fullName>Kanpur</fullName>
                </value>
                <value>
                    <fullName>jammu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Select_Stationry_Item__c</fullName>
        <label>Select Stationry Item</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Book</fullName>
                </value>
                <value>
                    <fullName>Duster</fullName>
                </value>
                <value>
                    <fullName>Notebook</fullName>
                </value>
                <value>
                    <fullName>Pencil</fullName>
                </value>
                <value>
                    <fullName>Pencil Sharpener</fullName>
                </value>
                <value>
                    <fullName>Plastic Folder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Stationary</relationshipLabel>
        <relationshipName>Stationary</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tEACHER__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Teacher</label>
        <referenceTo>Teacher__c</referenceTo>
        <relationshipLabel>Stationary</relationshipLabel>
        <relationshipName>Stationary</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Stationary</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{000}</displayFormat>
        <label>Stationary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stationary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>